// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Button renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  id="radio-group-column"
>
  <span
    className="css-0"
    id="rg-span-title-column"
  >
    column
  </span>
  <div
    aria-labelledby="rg-span-title-column"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack radioGroupStack css-19s3t1h"
    >
      <div
        className="css-1xdhyk6"
        id="radio-2-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="column"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
      </div>
      <div
        className="css-1xdhyk6"
        id="radio-3-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="column"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="column-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  id="radio-group-row"
>
  <span
    className="css-0"
    id="rg-span-title-row"
  >
    row
  </span>
  <div
    aria-labelledby="rg-span-title-row"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack radioGroupStack css-1478f2b"
    >
      <div
        className="css-1xdhyk6"
        id="radio-2-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="row"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
      </div>
      <div
        className="css-1xdhyk6"
        id="radio-3-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="row"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="row-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  id="radio-group-noLabel"
>
  <span
    className="css-0"
    id="rg-span-title-noLabel"
  >
    no label
  </span>
  <div
    aria-labelledby="rg-span-title-noLabel"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack radioGroupStack css-19s3t1h"
    >
      <div
        className="css-1xdhyk6"
        id="radio-2-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="noLabel"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
      </div>
      <div
        className="css-1xdhyk6"
        id="radio-3-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="noLabel"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="noLabel-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 4`] = `
<div
  className="css-1xdhyk6"
  id="radio-group-helperText"
>
  <span
    className="css-0"
    id="rg-span-title-helperText"
  >
    helperText
  </span>
  <div
    aria-labelledby="rg-span-title-helperText"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack radioGroupStack css-19s3t1h"
    >
      <div
        className="css-1xdhyk6"
        id="radio-2-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="helperText"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
      </div>
      <div
        className="css-1xdhyk6"
        id="radio-3-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="helperText"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="helperText-helperErrorText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "helper text",
        }
      }
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 5`] = `
<div
  className="css-1xdhyk6"
  id="radio-group-invalidText"
>
  <span
    className="css-0"
    id="rg-span-title-invalidText"
  >
    invalidText
  </span>
  <div
    aria-labelledby="rg-span-title-invalidText"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack radioGroupStack css-19s3t1h"
    >
      <div
        className="css-1xdhyk6"
        id="radio-2-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="invalidText"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
      </div>
      <div
        className="css-1xdhyk6"
        id="radio-3-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="invalidText"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="invalidText-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 6`] = `
<div
  className="css-1xdhyk6"
  id="radio-group-noRequiredLabel"
>
  <span
    className="css-0"
    id="rg-span-title-noRequiredLabel"
  >
    no optional or required label
  </span>
  <div
    aria-labelledby="rg-span-title-noRequiredLabel"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack radioGroupStack css-19s3t1h"
    >
      <div
        className="css-1xdhyk6"
        id="radio-2-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            aria-required={true}
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="noRequiredLabel"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={true}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
      </div>
      <div
        className="css-1xdhyk6"
        id="radio-3-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            aria-required={true}
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="noRequiredLabel"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={true}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="noRequiredLabel-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 7`] = `
<div
  className="css-1xdhyk6"
  id="radio-group-required"
>
  <span
    className="css-0"
    id="rg-span-title-required"
  >
    required
    <span>
       (required)
    </span>
  </span>
  <div
    aria-labelledby="rg-span-title-required"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack radioGroupStack css-19s3t1h"
    >
      <div
        className="css-1xdhyk6"
        id="radio-2-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            aria-required={true}
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="required"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={true}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
      </div>
      <div
        className="css-1xdhyk6"
        id="radio-3-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            aria-required={true}
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="required"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={true}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="required-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 8`] = `
<div
  className="css-1xdhyk6"
  id="radio-group-invalid"
>
  <span
    className="css-0"
    id="rg-span-title-invalid"
  >
    invalid
  </span>
  <div
    aria-labelledby="rg-span-title-invalid"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack radioGroupStack css-19s3t1h"
    >
      <div
        className="css-1xdhyk6"
        id="radio-2-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
          data-invalid=""
        >
          <input
            aria-invalid={true}
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="invalid"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            data-invalid=""
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            data-invalid=""
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
      </div>
      <div
        className="css-1xdhyk6"
        id="radio-3-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
          data-invalid=""
        >
          <input
            aria-invalid={true}
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="invalid"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            data-invalid=""
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            data-invalid=""
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={true}
    id="invalid-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 9`] = `
<div
  className="css-1xdhyk6"
  id="radio-group-disabled"
>
  <span
    className="css-0"
    id="rg-span-title-disabled"
  >
    disabled
  </span>
  <div
    aria-labelledby="rg-span-title-disabled"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack radioGroupStack css-19s3t1h"
    >
      <div
        className="css-1xdhyk6"
        id="radio-2-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
          data-disabled=""
        >
          <input
            aria-disabled={true}
            checked={false}
            className="chakra-radio__input"
            disabled={true}
            id="radio-2"
            name="disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            data-disabled=""
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            data-disabled=""
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
      </div>
      <div
        className="css-1xdhyk6"
        id="radio-3-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
          data-disabled=""
        >
          <input
            aria-disabled={true}
            checked={false}
            className="chakra-radio__input"
            disabled={true}
            id="radio-3"
            name="disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            data-disabled=""
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            data-disabled=""
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="disabled-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 10`] = `
<div
  className="css-1xdhyk6"
  id="radio-group-jsxLabels"
>
  <span
    className="css-0"
    id="rg-span-title-jsxLabels"
  >
    RadioGroup example
  </span>
  <div
    aria-labelledby="rg-span-title-jsxLabels"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack radioGroupStack css-19s3t1h"
    >
      <div
        className="css-1xdhyk6"
        id="arts-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="arts"
            name="a11y-test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="arts"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              <div
                className="css-k008qs"
              >
                <span>
                  Arts
                </span>
                <div
                  className="css-17xejub"
                />
                <span>
                  4
                </span>
              </div>
            </span>
          </span>
        </label>
      </div>
      <div
        className="css-1xdhyk6"
        id="English-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="English"
            name="a11y-test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="English"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              <div
                className="css-k008qs"
              >
                <span>
                  English
                </span>
                <div
                  className="css-17xejub"
                />
                <span>
                  23
                </span>
              </div>
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="jsxLabels-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 11`] = `
<div
  className="css-kle7zy"
  id="radio-group-chakra"
>
  <span
    className="css-0"
    id="rg-span-title-chakra"
  >
    chakra
  </span>
  <div
    aria-labelledby="rg-span-title-chakra"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack radioGroupStack css-19s3t1h"
    >
      <div
        className="css-1xdhyk6"
        id="radio-2-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="chakra"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
      </div>
      <div
        className="css-1xdhyk6"
        id="radio-3-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="chakra"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="chakra-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 12`] = `
<div
  className="css-1xdhyk6"
  data-testid="props"
  id="radio-group-props"
>
  <span
    className="css-0"
    id="rg-span-title-props"
  >
    props
  </span>
  <div
    aria-labelledby="rg-span-title-props"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack radioGroupStack css-19s3t1h"
    >
      <div
        className="css-1xdhyk6"
        id="radio-2-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="props"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
      </div>
      <div
        className="css-1xdhyk6"
        id="radio-3-wrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="props"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="css-14wybg9"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="props-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;
